--- a/ORSProject10-UI/src/app/user/user.component.html
+++ b/ORSProject10-UI/src/app/user/user.component.html
@@ -63,7 +63,7 @@
     </tr>
     <tr>
       <th>DOB : </th>
-      <td><input type="date" name="dob" [(ngModel)]="form.data.dob" /> </td>
+      <td><input type="date" name="dob | date : 'yyyy-MM-dd'" [(ngModel)]="form.data.dob" /> </td>
     </tr>
     <tr>
       <th>Profile : </th>
