--- a/angular-simple/src/app/login/signup.component.html
+++ b/angular-simple/src/app/login/signup.component.html
@@ -45,6 +45,7 @@
         <tr>
             <th></th>
             <td><button (click)="signUp()">signUp</button></td>
+            <td><button (click)="getData()">signUp</button></td>
         </tr>
     </table>
 </div>
