--- a/angular-simple/src/app/login/login.component.html
+++ b/angular-simple/src/app/login/login.component.html
@@ -2,16 +2,23 @@
 <h1>Login</h1>
 <table>
     <tr>
-        <td></td>
-        <td>{{form.message}}</td>
+        <td *ngIf="form.message != null">
+            <h3>{{form.message}}</h3>
+        </td>
     </tr>
     <tr>
         <th>Login ID :</th>
         <td><input type="text" [(ngModel)]="form.loginId" name="loginId" /></td>
+        <td *ngIf="inputerror.loginId != null" style="position: fixed;">
+            {{inputerror.loginId}}
+        </td>
     </tr>
     <tr>
         <th>Password :</th>
         <td><input type="text" [(ngModel)]="form.password" name="password" /></td>
+        <td *ngIf="inputerror.password != null" style="position: fixed;">
+            {{inputerror.password}}
+        </td>
     </tr>
     <tr>
         <th></th>
