--- a/angular-simple/src/app/user/user.component.html
+++ b/angular-simple/src/app/user/user.component.html
@@ -44,9 +44,13 @@
             <td><input type="date" name="dob" [(ngModel)]="form.dob" /> </td>
         </tr>
         <tr>
+            <th>Profile Pic :</th>
+            <td> <img src="http://localhost:8080/User/profilePic/{{form.id}}" height="55px" width="80px"></td>
+        </tr>
+        <tr>
             <th>Image :</th>
-            <td><input type="file" id="customFile" name="imageId" (change)="onFileSelect($event)"
-                    accept="image/*"> </td>
+            <td><input type="file" id="customFile" name="imageId" (change)="onFileSelect($event)" accept="image/*">
+            </td>
         </tr>
         <tr>
             <th></th>
