--- a/angular-simple/src/app/user/userlist.component.html
+++ b/angular-simple/src/app/user/userlist.component.html
@@ -8,10 +8,12 @@
                 <option *ngFor="let obj of form.preload.userList" [value]="obj.key">{{obj.value}}</option>
             </select></td>
         <td><button (click)="search()">search</button></td>
+        <td><button (click)="delete()">delete</button></td>
     </tr>
 </table>
 <table border="1">
     <tr>
+        <th>Select</th>
         <th>ID</th>
         <th>Image</th>
         <th>FirstName</th>
@@ -21,8 +23,12 @@
         <th>DOB</th>
         <th>Edit</th>
     </tr>
-    <tr *ngFor="let m of form.list">
-        <td>{{m.id}}</td>
+    <tr *ngFor="let m of form.list; let i = index">
+        <td style="text-align: center;">
+            <input type="checkbox" (change)="onCheckboxChange(m.id)" />
+        </td>
+
+        <td>{{(form.pageNo*5)+i+ 1}}</td>
         <td> <img src="http://localhost:8080/User/profilePic/{{m.id}}" height="55px" width="80px"></td>
         <td>{{m.firstName}}</td>
         <td>{{m.lastName}}</td>
@@ -31,5 +37,11 @@
         <td>{{m.dob}}</td>
         <td> <a (click)="edit( '/user/' +  m.id)" style="color: blue;">edit
             </a></td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td><button [disabled]="form.pageNo == 0" (click)="previous()">previous</button></td>
+        <td><button [disabled]="form.list.length < 5" (click)="next()">next</button></td>
     </tr>
 </table>
