--- a/angular-simple/src/app/user/userlist.component.html
+++ b/angular-simple/src/app/user/userlist.component.html
@@ -3,9 +3,10 @@
     <tr>
         <td><input type="text" [(ngModel)]="form.searchParams.firstName" />
         </td>
-        <td> <select name="id" [(ngModel)]="form.searchParams.id">
+        <td><input type="date" name="dob" [(ngModel)]="form.searchParams.dob" /> </td>
+        <td> <select name="id" [(ngModel)]="form.searchParams.roleId">
                 <option [ngValue]="" value="undefined">{{'------Select User-------' }}</option>
-                <option *ngFor="let obj of form.preload.userList" [value]="obj.key">{{obj.value}}</option>
+                <option *ngFor="let obj of form.preload.roleList" [value]="obj.key">{{obj.value}}</option>
             </select></td>
         <td><button (click)="search()">search</button></td>
         <td><button (click)="delete()">delete</button></td>
@@ -21,6 +22,7 @@
         <th>LoginId</th>
         <th>Password</th>
         <th>DOB</th>
+        <th>Role</th>
         <th>Edit</th>
     </tr>
     <tr *ngFor="let m of form.list; let i = index">
@@ -35,6 +37,7 @@
         <td>{{m.loginId}}</td>
         <td>{{m.password}}</td>
         <td>{{m.dob}}</td>
+        <td>{{m.roleName}}</td>
         <td> <a (click)="edit( '/user/' +  m.id)" style="color: blue;">edit
             </a></td>
     </tr>
