--- a/angular-simple/src/app/user/user.component.html
+++ b/angular-simple/src/app/user/user.component.html
@@ -49,7 +49,9 @@
         </tr>
         <tr>
             <th>DOB :</th>
-            <td><input type="date" name="dob" [(ngModel)]="form.dob" /> </td>
+            <td>
+                <input type="date" name="dob | date : 'yyyy-MM-dd'" [ngModel]="convertISODate(form.dob)" />
+            </td>
         </tr>
         <tr>
             <th>Profile Pic :</th>
